--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -1,1 +1,15 @@
-﻿{% seo %}
+﻿{% assign og_title = page.title | default: site.title %}
+{% assign og_desc  = page.description | default: site.description %}
+{% assign og_img   = page.image | default: '/assets/og/frankenserver-og.png' %}
+
+<link rel="canonical" href="{{ page.url | absolute_url }}">
+<meta property="og:type"        content="website">
+<meta property="og:title"       content="{{ og_title }}">
+<meta property="og:description" content="{{ og_desc }}">
+<meta property="og:image"       content="{{ og_img | absolute_url }}">
+<meta property="og:url"         content="{{ page.url | absolute_url }}">
+
+<meta name="twitter:card"        content="summary_large_image">
+<meta name="twitter:title"       content="{{ og_title }}">
+<meta name="twitter:description" content="{{ og_desc }}">
+<meta name="twitter:image"       content="{{ og_img | absolute_url }}">
